	- The move_center() and set_center() methods in Qt_widget are no longer public slots, but simple methods as it was documented. We let like this or we change the doc too. :) Maybe they should be public slots.
	- Modified the doc in Qt_widget according to the latest changes concerning the history. Laurent, please take a look and report bugs if any.


1.3.24 - 14/03/2003 (rursu)
-------------------
	radu:
	- Added Regular_triangulation_2 demo in Triangulation_2 dir
	- Modified names in Triangulation_2 dir of toolbar and toolbar_layers
	- Modified the Makefile to compile the doc, ref pages and tutorial
	

1.3.23 - 11/03/2003 (rursu)
-------------------
	radu:
	- Removed namespace CGAL from demos.
	- fixed bug in output operator for Conic_2
	- fixed warnings in couple projects: removed /Wp64 option
	laurent:
	- Qt_widget_show_mouse_coordinates no longer use sprintf
	- Layers are QObject objects, with a parent and a name
	- Fixed memory leak in src/CGALQt/Qt_widget_standard_toolbar.C (bug #37)

1.3.22 - 26/02/2003 (rineau)
-------------------
	Rewritten the standard toolbar. See bug#49.

1.3.21 - 21/02/2003
-------------------
	Rewritten the history stuff. See bug#38.

1.3.20 - 18/02/2003 (rursu)
--------------------
	fixed bug in Qt_widget_helpwindow.C/.h for Windows
	fixed project in src/CGALQt to build the helpwindow

1.3.10->1.3.15 - 14-02-2003
--------------------
	removed #include <CGAL/Qt_widget.h> from apply_to_range.h

1.3.7, 1.3.9 - 14-02-2003
------------
	removed dsp projects for VC6

1.3.6 - 13-02-2003
------------------
	Added help how to for Alpha_shape demo, Triangulation_2 demo, Triangulation_2_constrained demo
	Removed bug in new window that make demos to segmentation fault.

1.3.5 - 21-01-2003
	Qt_widget_helpwindow compiles now with g++2.95  with Leda compiler

1.3.4 - 17-01-2003
-------------------
	The Nef_2 demo compiles even if you don't use GMP.